Declared dependency to allow use as subproject

--- a/meson.build
+++ b/meson.build
@@ -5,6 +5,12 @@ check_location = get_option('check_location')
 
 include_files = include_directories(['include'])
 
+# This allows for other projects to use this as a subproject.
+
+sso_string_dep = declare_dependency(
+    include_directories: include_files
+)
+
 if check_location != ''
     test_inc = include_directories(['include', check_location + '/include'])
     subdir('tests')
