Moved some functions to src

--- a/meson.build
+++ b/meson.build
@@ -4,10 +4,29 @@ c_comp = meson.get_compiler('c')
 check_location = get_option('check_location')
 
 include_files = include_directories(['include'])
+sources = [ './src/sso_string.c' ]
+
+sso_string = static_library(
+    'sso_string',
+    sources,
+    include_directories: include_files,
+    install: true,
+    name_suffix: 'lib',
+    name_prefix: ''
+)
+
+sso_string_shared = shared_library(
+    'sso_string',
+    sources,
+    version: '1.1.0',
+    include_directories: include_files,
+    install: true,
+)
 
 # This allows for other projects to use this as a subproject.
 sso_string_dep = declare_dependency(
-    include_directories: include_files
+    include_directories: include_files,
+    link_with: sso_string_shared
 )
 
 if check_location != ''
