--- a/tests/meson.build
+++ b/tests/meson.build
@@ -1,4 +1,4 @@
-if check_location != ''
+if check_location != 'true'
     check_lib = check_location + '/lib'
     
     compat = c_comp.find_library('compat',
@@ -23,12 +23,13 @@ if c_comp.get_id() == 'msvc' and get_option('buildtype') == 'release'
     link_args += '/NODEFAULTLIB:MSVCRTD'
 endif
 
+compiler_args += '/DSSO_STRING_MACROS="../tests/test_macros.h"'
 
 string_tests = executable('string_tests',
-    'tests.c',
+    ['../src/sso_string.c', './tests.c'],
     include_directories: test_inc,
+    c_args: compiler_args,
     dependencies: deps,
-    link_with: sso_string_shared,
     link_args: link_args
 )
 
